--- a/work.html
+++ b/work.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Work · Jan Arroyo</title>
+  <!-- keep your global css for nav/base layout -->
   <link href="styles.css" rel="stylesheet" />
 
-  <!-- Work-page-only styles -->
+  <!-- Work-page-only styles (no black box behind logos) -->
   <style>
     .container{max-width:960px;margin:0 auto;padding:0 16px;}
     .page-title{font-size:22px;margin:28px 0 14px;}
@@ -21,18 +22,12 @@
     .row:focus-visible{outline:2px solid rgba(59,130,246,.5);outline-offset:4px;border-bottom-color:transparent;}
     .left{display:flex;align-items:center;gap:12px;min-width:0;}
 
-    /* logo tile like your reference */
-    .logo-wrap{
-      width:28px;height:28px;border-radius:8px;
-      display:grid;place-items:center;flex:0 0 28px;
-      background:linear-gradient(180deg,#1f2937,#111827);
-      box-shadow:inset 0 0 0 1px rgba(255,255,255,.06), 0 1px 2px rgba(0,0,0,.15);
-    }
+    /* logos: same size as before, a touch crisper, no background tile */
     .logo{
-      width:18px;height:18px;object-fit:contain;display:block;
-      image-rendering:-webkit-optimize-contrast; /* crisper on WebKit */
-      image-rendering:crisp-edges;              /* others */
-      transform:translateZ(0);                  /* avoid subpixel blur */
+      width:24px;height:24px;display:block;object-fit:contain;border-radius:6px;
+      image-rendering:-webkit-optimize-contrast; /* WebKit crispness */
+      image-rendering:crisp-edges;               /* others */
+      transform:translateZ(0);                    /* avoid subpixel blur */
     }
 
     .meta{display:flex;align-items:center;gap:10px;min-width:0;}
@@ -66,7 +61,7 @@
       <li>
         <a class="row" href="#" aria-label="USC Marshall Peer Career Advisor – Tech">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/Marshall.JPG" alt=""></span>
+            <img class="logo" src="images/Marshall.JPG" alt="">
             <span class="meta">
               <span class="co">USC Marshall</span>
               <span class="role">Peer Career Advisor – Tech</span>
@@ -80,7 +75,7 @@
       <li>
         <a class="row" href="https://www.amazon.jobs/content/en/teams/devices-and-services/lab126" target="_blank" rel="noopener" aria-label="Amazon">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/Amazon.JPG" alt=""></span>
+            <img class="logo" src="images/Amazon.JPG" alt="">
             <span class="meta">
               <span class="co">Amazon</span>
               <span class="role">Technical Program Manager Intern</span>
@@ -94,7 +89,7 @@
       <li>
         <a class="row" href="https://www.accenture.com/us-en/services/ecosystem-partners/microsoft" target="_blank" rel="noopener" aria-label="Accenture">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/Accenture.JPG" alt=""></span>
+            <img class="logo" src="images/Accenture.JPG" alt="">
             <span class="meta">
               <span class="co">Accenture</span>
               <span class="role">Strategy Tech Apps &amp; Dev Analyst Intern</span>
@@ -108,7 +103,7 @@
       <li>
         <a class="row" href="https://www.apple.com/careers/us/work-at-apple/students.html" target="_blank" rel="noopener" aria-label="Apple">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/Apple.JPG" alt=""></span>
+            <img class="logo" src="images/Apple.JPG" alt="">
             <span class="meta">
               <span class="co">Apple</span>
               <span class="role">Product Management Intern</span>
@@ -122,7 +117,7 @@
       <li>
         <a class="row" href="https://www.microsoft.com/en-us/modernfinance/digitaltransformation.aspx" target="_blank" rel="noopener" aria-label="Microsoft">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/Microsoft.JPG" alt=""></span>
+            <img class="logo" src="images/Microsoft.JPG" alt="">
             <span class="meta">
               <span class="co">Microsoft</span>
               <span class="role">Finance Data Analyst Intern</span>
@@ -136,7 +131,7 @@
       <li>
         <a class="row" href="https://worldfitforkids.org/" target="_blank" rel="noopener" aria-label="A World Fit For Kids">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/A-World-Fit-for-Kids.JPG" alt=""></span>
+            <img class="logo" src="images/A-World-Fit-for-Kids.JPG" alt="">
             <span class="meta">
               <span class="co">A World Fit For Kids</span>
               <span class="role">Strategy Consultant</span>
@@ -150,7 +145,7 @@
       <li>
         <a class="row" href="https://www.therams.com/news/rams-la-promise-fund-create-summer-internship-program-for-inglewood-unified-stud" target="_blank" rel="noopener" aria-label="Los Angeles Rams">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/LARAMS.JPG" alt=""></span>
+            <img class="logo" src="images/LARAMS.JPG" alt="">
             <span class="meta">
               <span class="co">Los Angeles Rams</span>
               <span class="role">Data &amp; Systems Analyst – Intern</span>
@@ -164,7 +159,7 @@
       <li>
         <a class="row" href="https://www.therams.com/news/rams-la-promise-fund-create-summer-internship-program-for-inglewood-unified-stud" target="_blank" rel="noopener" aria-label="LA Conservation Corps">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/LACC.JPG" alt=""></span>
+            <img class="logo" src="images/LACC.JPG" alt="">
             <span class="meta">
               <span class="co">LA Conservation Corps</span>
               <span class="role">Project Lead</span>
@@ -178,11 +173,11 @@
     <!-- INVOLVEMENTS -->
     <h2 class="page-title" style="margin-top:28px;">Involvements</h2>
     <ul class="list" aria-label="Student & community involvement">
-      <!-- BTG (Quokka lives under BTG, so keep here only) -->
+      <!-- BTG -->
       <li>
         <a class="row" href="https://www.uscbtg.org/" target="_blank" rel="noopener" aria-label="Business Technology Group (USC)">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/BTG.JPG" alt=""></span>
+            <img class="logo" src="images/BTG.JPG" alt="">
             <span class="meta">
               <span class="co">Business Technology Group (USC)</span>
               <span class="role">VP of Projects</span>
@@ -196,7 +191,7 @@
       <li>
         <a class="row" href="https://www.ey.com/en_us/about-us/corporate-responsibility/mentoring-of-the-future-workforce-strengthens-communities-and-careers" target="_blank" rel="noopener" aria-label="EY CMAP">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/EY.JPG" alt=""></span>
+            <img class="logo" src="images/EY.JPG" alt="">
             <span class="meta">
               <span class="co">EY CMAP</span>
               <span class="role">Education Strategy Consultant</span>
@@ -210,7 +205,7 @@
       <li>
         <a class="row" href="https://uscfgsa.carrd.co/" target="_blank" rel="noopener" aria-label="USC First-Generation Student Center">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/FGSA.JPG" alt=""></span>
+            <img class="logo" src="images/FGSA.JPG" alt="">
             <span class="meta">
               <span class="co">USC First-Generation Student Center</span>
               <span class="role">Program Manager</span>
@@ -224,7 +219,7 @@
       <li>
         <a class="row" href="https://www.usclbsa.com/" target="_blank" rel="noopener" aria-label="Latino Business Student Association">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/LBSA.JPG" alt=""></span>
+            <img class="logo" src="images/LBSA.JPG" alt="">
             <span class="meta">
               <span class="co">Latino Business Student Association</span>
               <span class="role">Member</span>
@@ -238,7 +233,7 @@
       <li>
         <a class="row" href="https://www.uscisa.org/" target="_blank" rel="noopener" aria-label="International Student Assembly">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/ISA.JPG" alt=""></span>
+            <img class="logo" src="images/ISA.JPG" alt="">
             <span class="meta">
               <span class="co">International Student Assembly</span>
               <span class="role">Advocacy &amp; Program Manager Intern</span>
@@ -252,7 +247,7 @@
       <li>
         <a class="row" href="https://partnershipla.org/who-we-are/" target="_blank" rel="noopener" aria-label="The LA Partnership">
           <span class="left">
-            <span class="logo-wrap"><img class="logo" src="images/Partnership.JPG" alt=""></span>
+            <img class="logo" src="images/Partnership.JPG" alt="">
             <span class="meta">
               <span class="co">The LA Partnership</span>
               <span class="role">Policy Advisory Board Member</span>
